# KunBoxForWindows

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
core/: KernelManager.ts  SingBoxManager.ts  SystemProxy.ts  TrafficMonitor.ts  VpnService.ts  index.ts  package-lock.json  package.json  tsconfig.json  types.ts
kunbox-electron/: .gitignore  LICENSE  electron-builder.yml  electron.vite.config.ts  generate-icons.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
kunbox-electron/src/main/: index.ts  tray.ts
kunbox-electron/src/main/ipc/: kernel.ts  profiles.ts  rulesets.ts  settings.ts  singbox.ts
kunbox-electron/src/main/utils/: configGenerator.ts  ruleSetManager.ts
kunbox-electron/src/preload/: index.ts
kunbox-electron/src/renderer/: App.tsx  index.html  main.tsx
kunbox-electron/src/renderer/components/: Dashboard.tsx  DomainRules.tsx  KernelSettings.tsx  Logs.tsx  Nodes.tsx  ProcessRules.tsx  Profiles.tsx  RuleSets.tsx  Settings.tsx
kunbox-electron/src/renderer/lib/: utils.ts
kunbox-electron/src/renderer/stores/: connectionStore.ts  nodesStore.ts
kunbox-electron/src/renderer/styles/: globals.css
kunbox-electron/src/renderer/types/: global.d.ts
kunbox-electron/src/shared/: constants.ts  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: kernel.rs  mod.rs  profiles.rs  rulesets.rs  settings.rs  singbox.rs  window.rs
(+8 files in other folders)
