[package]
name = "kunbox"
version = "1.0.0"
description = "KunBox - Cross-platform sing-box proxy client"
authors = ["KunBox"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kunbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
zip = "2.2"
open = "5"
futures-util = "0.3"
futures = "0.3"
once_cell = "1.19"
